[refac] adjust bottom layout to bleed
Rescale the bottom layouts images: set to 300 PPI and scale the brown border
height from 5.42mm to 8.42mm.

Find the new ratio height scaling with:
    No bleed: 167 -> 0.05
    Bleed:    202 -> ?
    -------------------------
    New ratio = 0.06047904191

--- a/metadata.tex
+++ b/metadata.tex
@@ -285,14 +285,14 @@
   \iftoggle{printable}{
     \iftoggle{textright2left}{
       \ifodd\value{page}
-        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom-even.png}}
+        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.06047904191\paperheight]{\layout/bottom-even-bleed-300.png}}
       \else
-        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom-odd.png}}
+        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.06047904191\paperheight]{\layout/bottom-odd-bleed-300.png}}
     \fi}{%
       \ifodd\value{page}
-        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom-odd.png}}
+        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.06047904191\paperheight]{\layout/bottom-odd-bleed-300.png}}
       \else
-        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom-even.png}}
+        \put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.06047904191\paperheight]{\layout/bottom-even-bleed-300.png}}
     \fi}
   }{\put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom.png}}}
 }
