[refac] reposition castle_bottom to account for bleed
Get the max width and bottom height of the picture.

--- a/metadata.tex
+++ b/metadata.tex
@@ -355,8 +355,8 @@
 }{}
 
 \textlang{english}{\begin{tikzpicture}[remember picture, overlay]
-  \node(cover)[anchor=center, yshift=12em] at (current page.south) {
-    \includegraphics[width=1.01\paperwidth, keepaspectratio]{\art/castle_bottom.png}
+  \node(cover)[anchor=center, xshift=0.7mm, yshift=12.7em] at (current page.south) {
+    \includegraphics[width=1.0\paperwidth, keepaspectratio]{\art/castle_bottom.png}
     \thispagestyle{empty}
   };
 \end{tikzpicture}}
