Add link to combat instructions for solo/coop scenarios

--- a/sections/combat.tex
+++ b/sections/combat.tex
@@ -46,6 +46,7 @@ If there's not enough room to place a Unit in its correct line, place them in th
 Units must be placed in \textbf{descending} Initiative\index{Initiative} order.
 If there's a tie, place higher tier Units first.
 If there's still a tie, the players decide the order.
+Check the \pagelink{AI Units}{\textbf{Combat against AI}} section for combat instructions.
 \end{itemize}
 Unit setup when fighting \textbf{other players}:
 \begin{itemize}
